# judymatch

./: AUTHORS.md  CMakeLists.txt  COMPILING_TUTORIAL.txt  DISCLAIMER.txt  README.md  SConscript  SConstruct  default.sconf
applications/: CMakeLists.txt
applications/example1/: CMakeLists.txt  SConscript
applications/example1/src/: CMakeLists.txt
applications/example1/src/example1/: main.cpp
libraries/: CMakeLists.txt
libraries/judy/: CMakeLists.txt  SConscript
libraries/judy/src/: CMakeLists.txt
libraries/judy/src/judy/: JudyArray.cpp  JudyArray.hpp  JudyArray.tcc  JudyArrayIterator.cpp  JudyArrayIterator.hpp  JudyArrayIterator.tcc  helpers.cpp  helpers.hpp  judy.c  judy.h
libraries/judymatch/: CMakeLists.txt  SConscript
libraries/judymatch/src/: CMakeLists.txt
libraries/judymatch/src/judymatch/: Matcher.cpp  Matcher.hpp  Matcher.tcc
libraries/judymatch/src/judymatch/config/: config.hpp  debug.hpp  global.hpp  logging.cpp  logging.hpp  math.hpp  release.hpp  translation.hpp  version.hpp
libraries/judymatch/src/judymatch/config/windows/: windows.h
libraries/judymatch/src/judymatch/core/: boost_error_info_sstream.hpp  exceptions.cpp  exceptions.hpp  judy_vector_ext.hpp  rethrow.hpp  vec_type.hpp
libraries/judymatch/src/judymatch/geohash/dct/: dct.cpp  dct.hpp
libraries/judymatch/src/judymatch/geohash/spiroid/: spiroid.cpp  spiroid.hpp
libraries/judymatch/src/judymatch/geometry/: distance.hpp
libraries/judymatch/src/judymatch/lsh/dct/: dct.cpp  dct.hpp
libraries/judymatch/src/judymatch/lsh/polar/: polar.cpp  polar.hpp
libraries/vfwavelib/: CMakeLists.txt  SConscript
libraries/vfwavelib/src/: CMakeLists.txt
libraries/vfwavelib/src/vfwavelib/: timings.h  vfwl_codec.c  vfwl_codec.h  vfwl_globals.h  vfwl_image.c  vfwl_image.h  vfwl_uquantizer.c  vfwl_uquantizer.h
tests/: CMakeLists.txt  unittest.hpp
tests/judy/: CMakeLists.txt  SConscript
tests/judy/src/: CMakeLists.txt  SConscript  main.cpp
tests/judymatch/: CMakeLists.txt  SConscript
tests/judymatch/src/: CMakeLists.txt  SConscript  dct.cpp  main.cpp  polar.hpp
tools/copyright/: copyright.txt
