cmake_minimum_required(VERSION 2.8.11)

project(VfWaveLib CXX)

# Set sequenceParser versions
set(VFWAVELIB_VERSION_MAJOR "1")
set(VFWAVELIB_VERSION_MINOR "0")
set(VFWAVELIB_VERSION_MICRO "0")
set(VFWAVELIB_VERSION ${VFWAVELIB_VERSION_MAJOR}.${VFWAVELIB_VERSION_MINOR}.${VFWAVELIB_VERSION_MICRO})

# Define sequenceParser versions
add_definitions(-DVFWAVELIB_VERSION_MAJOR=${VFWAVELIB_VERSION_MAJOR})
add_definitions(-DVFWAVELIB_VERSION_MINOR=${VFWAVELIB_VERSION_MINOR})
add_definitions(-DVFWAVELIB_VERSION_MICRO=${VFWAVELIB_VERSION_MICRO})

# CPP flags on debug / release mode
if(MSVC)
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
else()
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -fPIC -pg -g")
        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fPIC -O3")
endif()

ADD_SUBDIRECTORY(src)
