cmake_minimum_required(VERSION 2.8.11)

project( JudyMatchTest CXX )

# Set JudyMatchTest versions
set( JUDYMATCH_TEST_VERSION_MAJOR "1" )
set( JUDYMATCH_TEST_VERSION_MINOR "0" )
set( JUDYMATCH_TEST_VERSION_MICRO "0" )
set( JUDYMATCH_TEST_VERSION ${JUDYMATCH_TEST_VERSION_MAJOR}.${JUDYMATCH_TEST_VERSION_MINOR}.${JUDYMATCH_TEST_VERSION_MICRO} )

# Define JudyMatchTest versions
add_definitions( -DJUDYMATCH_TEST_VERSION_MAJOR=${JUDYMATCH_TEST_VERSION_MAJOR} )
add_definitions( -DJUDYMATCH_TEST_VERSION_MINOR=${JUDYMATCH_TEST_VERSION_MINOR} )
add_definitions( -DJUDYMATCH_TEST_VERSION_MICRO=${JUDYMATCH_TEST_VERSION_MICRO} )
add_definitions( -DJUDYMATCH_TEST_STATIC_BUILD )

# Diplay commands being ran by CMake
set( CMAKE_VERBOSE_MAKEFILE OFF )

# CPP flags on debug / release mode
if( MSVC )
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
else()
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -fPIC -pg -g")
        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fPIC -O3")
endif()

add_subdirectory(src)
